--- a/src/main/resources/assets/mccourse/lang/en_us.json
+++ b/src/main/resources/assets/mccourse/lang/en_us.json
@@ -33,6 +33,8 @@
   "block.mccourse.dahlia": "Dahlia",
   "block.mccourse.potted_dahlia": "Potted Dahlia",
 
+  "block.mccourse.colored_leaves": "Colored Leaves",
+
   "itemgroup.fluorite": "Fluorite Items",
   "itemgroup.fluorite_blocks": "Fluorite Blocks",
 
